// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomersScreen displays loader when isLoading is true 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    color="#007bff"
    size="small"
    testID="loader"
  />
</View>
`;

exports[`displays user list when data is loaded 1`] = `
<RCTScrollView
  showsVerticalScrollIndicator={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "paddingHorizontal": 24,
    }
  }
  testID="customers-screen"
>
  <View>
    <View
      testID="category-header"
    >
      <Text
        style={
          {
            "fontSize": 18,
            "fontWeight": "bold",
            "marginBottom": 8,
            "marginTop": 16,
          }
        }
      >
        User Types
      </Text>
    </View>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 122, 255, 0.12)",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginRight": 20,
            "marginTop": 10,
            "opacity": 1,
            "paddingLeft": 8,
            "paddingVertical": 12,
          }
        }
        testID="admin-button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#dadee6",
              "borderRadius": 12,
              "borderWidth": 2,
              "height": 18,
              "justifyContent": "center",
              "width": 18,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#000000",
                "borderRadius": 3,
                "height": 6,
                "width": 6,
              }
            }
          />
        </View>
        <Text
          style={
            {
              "marginLeft": 18,
            }
          }
        >
          Admin
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginRight": 20,
            "marginTop": 10,
            "opacity": 1,
            "paddingLeft": 8,
            "paddingVertical": 12,
          }
        }
        testID="manager-button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#dadee6",
              "borderRadius": 12,
              "borderWidth": 2,
              "height": 18,
              "justifyContent": "center",
              "width": 18,
            }
          }
        />
        <Text
          style={
            {
              "marginLeft": 18,
            }
          }
        >
          Manager
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#dadee6",
          "height": 1,
          "marginLeft": 2,
          "marginRight": 20,
          "marginTop": 18,
        }
      }
      testID="line-separator"
    />
    <View
      testID="category-header"
    >
      <Text
        style={
          {
            "fontSize": 18,
            "fontWeight": "bold",
            "marginBottom": 8,
            "marginTop": 16,
          }
        }
      >
        Manager Users
      </Text>
    </View>
    <View
      style={
        {
          "marginBottom": 24,
          "marginTop": 8,
        }
      }
      testID="user-0"
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(0, 122, 255, 0.12)",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginRight": 14,
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            style={
              {
                "color": "#5280eb",
              }
            }
          >
            S
          </Text>
        </View>
        <View>
          <Text
            style={
              {
                "fontSize": 14,
                "fontWeight": "600",
              }
            }
          >
            Suraj Singh
          </Text>
          <Text
            style={
              {
                "color": "#5e5e5d",
              }
            }
          >
            Admin
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#dadee6",
          "height": 1,
          "marginLeft": 2,
          "marginRight": 20,
          "marginTop": 18,
        }
      }
      testID="line-separator"
    />
  </View>
</RCTScrollView>
`;

exports[`does not display loader when isLoading is false 1`] = `
<RCTScrollView
  showsVerticalScrollIndicator={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "paddingHorizontal": 24,
    }
  }
  testID="customers-screen"
>
  <View>
    <View
      testID="category-header"
    >
      <Text
        style={
          {
            "fontSize": 18,
            "fontWeight": "bold",
            "marginBottom": 8,
            "marginTop": 16,
          }
        }
      >
        User Types
      </Text>
    </View>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 122, 255, 0.12)",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginRight": 20,
            "marginTop": 10,
            "opacity": 1,
            "paddingLeft": 8,
            "paddingVertical": 12,
          }
        }
        testID="admin-button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#dadee6",
              "borderRadius": 12,
              "borderWidth": 2,
              "height": 18,
              "justifyContent": "center",
              "width": 18,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#000000",
                "borderRadius": 3,
                "height": 6,
                "width": 6,
              }
            }
          />
        </View>
        <Text
          style={
            {
              "marginLeft": 18,
            }
          }
        >
          Admin
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 8,
            "flexDirection": "row",
            "marginRight": 20,
            "marginTop": 10,
            "opacity": 1,
            "paddingLeft": 8,
            "paddingVertical": 12,
          }
        }
        testID="manager-button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#dadee6",
              "borderRadius": 12,
              "borderWidth": 2,
              "height": 18,
              "justifyContent": "center",
              "width": 18,
            }
          }
        />
        <Text
          style={
            {
              "marginLeft": 18,
            }
          }
        >
          Manager
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#dadee6",
          "height": 1,
          "marginLeft": 2,
          "marginRight": 20,
          "marginTop": 18,
        }
      }
      testID="line-separator"
    />
    <View
      testID="category-header"
    >
      <Text
        style={
          {
            "fontSize": 18,
            "fontWeight": "bold",
            "marginBottom": 8,
            "marginTop": 16,
          }
        }
      >
        Manager Users
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#dadee6",
          "height": 1,
          "marginLeft": 2,
          "marginRight": 20,
          "marginTop": 18,
        }
      }
      testID="line-separator"
    />
  </View>
</RCTScrollView>
`;
